# novasvg

./: .gitignore  CMakeLists.txt  CMakeLists_new.txt  README.md  README_CLI.md  README_PYTHON.md  pyproject.toml
.github/workflows/: cmake.yml
cmake/: DynamicVersion.cmake
docs/: Doxyfile.in  README.md  about.md  footer.html
examples/cpp/: sample01_convert_svg_to_png.cpp  sample02_query_svg_size.cpp
include/novasvg/: novasvg.h
include/novasvg/detail/: graphics.h  graphics.hpp  graphics.inl  novasvg.hpp  novasvg.inl  novasvg_impl.h  svgelement.h  svgelement.hpp  svgelement.inl  svggeometryelement.h  svggeometryelement.hpp  svggeometryelement.inl  svglayoutstate.h  svglayoutstate.hpp  svglayoutstate.inl  svgpaintelement.h  svgpaintelement.hpp  svgparser.hpp  svgparser.inl  svgparserutils.h  svgproperty.h  svgproperty.hpp  svgproperty.inl  svgrenderstate.h  svgrenderstate.hpp  svgtextelement.h  svgtextelement.hpp  svgtextelement.inl
include/novasvg/detail/plutovg/: plutovg-blend.h  plutovg-canvas.h  plutovg-font.h  plutovg-ft-math.h  plutovg-ft-raster.h  plutovg-ft-stroker.h  plutovg-ft-types.h  plutovg-matrix.h  plutovg-paint.h  plutovg-path.h  plutovg-private.h  plutovg-rasterize.h  plutovg-stb-image-write.h  plutovg-stb-image.h  plutovg-stb-truetype.h  plutovg-surface.h  plutovg-utils.h
src/: novasvg_cli.cpp
src/novasvg/: __init__.py
tests/: test_example.py
tests/cpp/: test_additional.cpp  test_basics.cpp  test_comprehensive.cpp  test_main.cpp
