[build-system]
requires = [
    "scikit-build-core>=0.8.0",
    "nanobind>=2.0.0",
    "numpy>=1.20.0"
]
build-backend = "scikit_build_core.build"

[project]
name = "novasvg"
dynamic = ["version"]
description = "NovaSVG is a header-only SVG library with Python bindings"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Mohammad Raziei", email = "mohammadraziei1375@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/mohammadraziei/novasvg"
Repository = "https://github.com/mohammadraziei/novasvg"
Documentation = "https://mohammadraziei.github.io/novasvg"

[tool.scikit-build]
cmake.args = ["-DNOVASVG_BUILD=ON", "-DCMAKE_BUILD_TYPE=Release"]
cmake.define.NOVASVG_BUILD_SHARED = "OFF"
cmake.define.NOVASVG_BUILD_STATIC = "ON"
cmake.define.NANOBIND_PROJECT_NAME = "novasvg"


[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "include/novasvg/novasvg.h"
regex = '''(?sx)
\#define \s+ NOVASVG_VERSION_MAJOR \s+ (?P<major>\d+) .*?
\#define \s+ NOVASVG_VERSION_MINOR \s+ (?P<minor>\d+) .*?
\#define \s+ NOVASVG_VERSION_PATCH \s+ (?P<patch>\d+) .*?
'''
result = "{major}.{minor}.{patch}"
